--- a/battle/views/play.erb
+++ b/battle/views/play.erb
@@ -1,7 +1,7 @@
-<%= @player_1_name %> vs. <%= @player_2_name %>
-<%= @player_2_name %>: 60HP
+<h1><%= @player_1_name %> vs. <%= @player_2_name %></h1>
+<h1><%= @player_2_name %>: 60HP</h1>
 <a href="/attack">Attack</a>
-# you can also use this form, just using click_button insteas of click_link.
+<!-- # you can also use this form, just using click_button insteas of click_link.
 <form action="attack>"
   <input type="submit" value="Attack">
-</form>
+</form> -->
