Implementing hit points, partial

--- a/battle/views/attack.erb
+++ b/battle/views/attack.erb
@@ -1,1 +1,2 @@
 <h1><%= @player_1_name %> attacked <%= @player_2_name %></h1>
+<h1><%= @player_2_name %>, you just lost 10HP. Your current score is <%= @player_2_hp %>HP.</h1>
